--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,11 +15,12 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
 #add_executable(enum enum.c)
+add_executable(grab grab.c)
 #add_executable(grab-async grab-async.c)
 #add_executable(benchmark benchmark.c)
 
 #target_link_libraries(enum uca)
-#target_link_libraries(grab uca)
+target_link_libraries(grab uca-gobject)
 #target_link_libraries(grab-async uca)
 #target_link_libraries(benchmark uca)
 
