--- a/src/uca.pc.in
+++ b/src/uca.pc.in
@@ -9,5 +9,5 @@ includedir_new=@includedir@
 Name: libuca
 Description: @UCA_DESCRIPTION@
 Version: @VERSION@
-Libs: -L${libdir} -luca-gobject
+Libs: -L${libdir} -luca
 Cflags: -I${includedir_old} -I${includedir_new}
