--- a/src/config.h.in
+++ b/src/config.h.in
@@ -2,6 +2,7 @@
 #cmakedefine HAVE_PHOTON_FOCUS
 #cmakedefine HAVE_PHOTRON_FASTCAM
 #cmakedefine HAVE_UFO_CAMERA
+#cmakedefine HAVE_PYLON_CAMERA
 
 #cmakedefine HAVE_MOCK_CAMERA
 #define CONTROL_GLADE_PATH "${CMAKE_INSTALL_PREFIX}/share/libuca/control.glade"
