Install camera-specific headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ set(uca_SRCS
     uca-camera.c
     )
 
+set(uca_HDRS
+    uca-camera.h)
+
 set(cameras)
 
 # --- Find packages and libraries ---------------------------------------------
@@ -38,7 +41,8 @@ if (PF_FOUND)
     option(HAVE_PHOTON_FOCUS "Camera: Photon Focus MV2-D1280-640-CL-8" ON)
 
     if (HAVE_PHOTON_FOCUS AND CLSERME4_FOUND AND FGLIB5_FOUND)
-        set(uca_SRCS ${uca_SRCS} cameras/uca-pf-camera.c)
+        list(APPEND uca_SRCS cameras/uca-pf-camera.c)
+        list(APPEND uca_HDRS cameras/uca-pf-camera.h)
         list(APPEND cameras "Pf")
 
         set(uca_LIBS ${uca_LIBS} 
@@ -56,7 +60,8 @@ if (PCO_FOUND AND CLSERME4_FOUND AND FGLIB5_FOUND)
     option(HAVE_PCO_CL "Camera: CameraLink-based pco" ON)
 
     if (HAVE_PCO_CL)
-        set(uca_SRCS ${uca_SRCS} cameras/uca-pco-camera.c)
+        list(APPEND uca_SRCS cameras/uca-pco-camera.c)
+        list(APPEND uca_HDRS cameras/uca-pco-camera.h)
         list(APPEND cameras "Pco")
 
         set(uca_LIBS ${uca_LIBS}
@@ -75,16 +80,19 @@ if (IPE_FOUND)
     option(HAVE_UFO_CAMERA "Camera: Custom based on Xilinx FPGA" ON)
 
     if (HAVE_UFO_CAMERA)
-        set(uca_SRCS ${uca_SRCS} cameras/uca-ufo-camera.c)
-        set(uca_LIBS ${uca_LIBS} ${IPE_LIBRARIES})
+        list(APPEND uca_SRCS cameras/uca-ufo-camera.c)
+        list(APPEND uca_HDRS cameras/uca-ufo-camera.h)
         list(APPEND cameras "Ufo")
+
+        set(uca_LIBS ${uca_LIBS} ${IPE_LIBRARIES})
 
         include_directories(${IPE_INCLUDE_DIRS})
     endif()
 endif()
 
 if (HAVE_MOCK_CAMERA)
-    set(uca_SRCS ${uca_SRCS} cameras/uca-mock-camera.c)
+    list(APPEND uca_SRCS cameras/uca-mock-camera.c)
+    list(APPEND uca_HDRS cameras/uca-mock-camera.h)
     list(APPEND cameras "Mock")
 endif()
 
@@ -206,7 +214,7 @@ set(LIB_INSTALL_DIR "lib${LIB_SUFFIX}")
 install(TARGETS uca
     LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 
-install(FILES uca-camera.h
+install(FILES ${uca_HDRS} 
     DESTINATION include/uca)
 
 # --- install pkg-config file
