--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,11 +17,9 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
 #add_executable(enum enum.c)
-#add_executable(grab-async grab-async.c)
 #add_executable(benchmark benchmark.c)
 
 #target_link_libraries(enum uca)
-#target_link_libraries(grab-async uca)
 #target_link_libraries(benchmark uca)
 
 include_directories(
@@ -31,7 +29,10 @@ include_directories(
     )
 
 add_executable(grab grab.c)
+add_executable(grab-async grab-async.c)
+
 target_link_libraries(grab uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
+target_link_libraries(grab-async uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 
 if (GTK2_FOUND)
     include_directories(${GTK2_INCLUDE_DIRS})
