--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,14 +17,10 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
 #add_executable(enum enum.c)
-add_executable(grab grab.c)
-add_executable(grab_pylon grab_pylon.c)
 #add_executable(grab-async grab-async.c)
 #add_executable(benchmark benchmark.c)
 
 #target_link_libraries(enum uca)
-target_link_libraries(grab uca-gobject ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
-target_link_libraries(grab_pylon uca-gobject ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 #target_link_libraries(grab-async uca)
 #target_link_libraries(benchmark uca)
 
@@ -42,6 +38,9 @@ add_executable(grab-async grab-async.c)
 
 target_link_libraries(grab uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 target_link_libraries(grab-async uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
+
+add_executable(grab_pylon grab_pylon.c)
+target_link_libraries(grab_pylon uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 
 if (GTK2_FOUND)
     include_directories(${GTK2_INCLUDE_DIRS})
