Add property tree view
The standard tree view widget is not capable of setting individual cell
renderers per row. Thus I made one with a custom cell renderer that uses an
appropriate cell renderer depending of the property type.

I developed this independently and put it up on Github at
https://github.com/matze/EggPropertyTreeView.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,7 +36,10 @@ target_link_libraries(grab-async uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 
 if (GTK2_FOUND)
     include_directories(${GTK2_INCLUDE_DIRS})
-    add_executable(control control.c)
+    add_executable(control 
+        control.c 
+        egg-property-cell-renderer.c
+        egg-property-tree-view.c)
     target_link_libraries(control uca
         ${GTK2_LIBRARIES} ${GTHREAD2_LIBRARIES})
 endif()
