--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -274,7 +274,7 @@ set(VERSION ${UCA_VERSION_STRING})
 
 set(CPACK_GENERATOR "DEB;RPM;")
 set(CPACK_SOURCE_GENERATOR "TGZ")
-set(CPACK_SOURCE_IGNORE_FILES "tags" ".bzr" ".swp")
+set(CPACK_SOURCE_IGNORE_FILES ".git" "tags" ".bzr" ".swp")
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "libuca-${UCA_VERSION_STRING}" CACHE INTERNAL "tarball basename")
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${UCA_VERSION_STRING}-${CMAKE_SYSTEM_PROCESSOR}")
 
