--- a/src/config.h.in
+++ b/src/config.h.in
@@ -4,3 +4,4 @@
 #cmakedefine HAVE_UFO_CAMERA
 
 #cmakedefine HAVE_MOCK_CAMERA
+#define CONTROL_GLADE_PATH "${CMAKE_INSTALL_PREFIX}/share/libuca/control.glade"
