--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,23 +10,20 @@ pkg_check_modules(GTHREAD2 gthread-2.0)
 pkg_check_modules(GLIB2 glib-2.0>=2.24 REQUIRED)
 pkg_check_modules(GOBJECT2 gobject-2.0>=2.24 REQUIRED)
 
-include_directories(${CMAKE_SOURCE_DIR}/src)
+#include_directories(${CMAKE_SOURCE_DIR}/src)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/control.glade ${CMAKE_CURRENT_BINARY_DIR})
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
-#add_executable(enum enum.c)
-#add_executable(benchmark benchmark.c)
-
-#target_link_libraries(enum uca)
-#target_link_libraries(benchmark uca)
-
 include_directories(
     ${GLIB2_INCLUDE_DIRS}
     ${GOBJECT2_INCLUDE_DIRS}
-    ${CMAKE_CURRENT_SOURCE_DIR}/../src/cameras
+    ${CMAKE_CURRENT_BINARY_DIR}/../src/
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src
     )
+
+message("${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_executable(grab grab.c)
 add_executable(grab-async grab-async.c)
@@ -36,12 +33,20 @@ target_link_libraries(grab-async uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 
 if (GTK2_FOUND)
     include_directories(${GTK2_INCLUDE_DIRS})
+
     add_executable(control 
         control.c 
         egg-property-cell-renderer.c
         egg-property-tree-view.c)
+
     target_link_libraries(control uca
         ${GTK2_LIBRARIES} ${GTHREAD2_LIBRARIES})
+
+    install(TARGETS control
+        RUNTIME DESTINATION bin)
+
+    install(FILES control.glade
+        DESTINATION share/libuca)
 endif()
 
 if (HAVE_MOCK_CAMERA)
@@ -52,8 +57,4 @@ endif()
 
 add_executable(test-all test-all.c)
 target_link_libraries(test-all uca
-    ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
-
-add_executable(perf-overhead perf-overhead.c)
-target_link_libraries(perf-overhead uca
     ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
