SCHNEIDE-255 (ROI support basler)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,13 +96,13 @@ if (PYLON_FOUND)
   option(HAVE_PYLON_CAMERA "Camera: Pylon based (Basler)" ON)
 
   if (HAVE_PYLON_CAMERA)
-    set(uca_SRCS ${uca_SRCS} cameras/uca-pylon-camera.c cameras/pylon_camera.cpp)
-    set(uca_HDRS ${uca_HDRS} cameras/uca-pylon-camera.h)
-    set(uca_LIBS ${uca_LIBS} ${PYLON_LIBS})
-    #list(APPEND cameras "Pylon")
+        list(APPEND uca_SRCS cameras/uca-pylon-camera.c cameras/pylon_camera.cpp)
+        list(APPEND uca_HDRS cameras/uca-pylon-camera.h)
+        list(APPEND cameras "Pylon")
+        set(uca_LIBS ${uca_LIBS} ${PYLON_LIBS})
 
-    include_directories(${PYLON_INCLUDE_DIRS})
-    link_directories(/opt/pylon/lib64)
+        include_directories(${PYLON_INCLUDE_DIRS})
+        link_directories(/opt/pylon/lib64)
   endif()
 
 endif()
