--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CPACK_DEBIAN_PACKAGE_DESCRIPTION_SUMMARY ${UCA_DESCRIPTION})
 
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+SET(UCA_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
 add_subdirectory(src)
 add_subdirectory(test)
