--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -282,7 +282,9 @@ set(CPACK_PACKAGE_NAME "libuca")
 
 # --- Distro specific
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.3.6), libgcc1 (>= 1:4.1)")
-set(CPACK_SET_DESTDIR ON)
+
+# this doesn't work when building RPMs on Jenkins
+#set(CPACK_SET_DESTDIR ON)
 
 set(CPACK_PACKAGE_CONTACT "Matthias Vogelgesang")
 set(CPACK_PACKAGE_VENDOR "Karlsruhe Institute of Technology/IPE")
@@ -296,5 +298,8 @@ set(CPACK_SOURCE_GENERATOR "TGZ")
 set(CPACK_SOURCE_IGNORE_FILES ".git" "tags" ".bzr" ".swp")
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "libuca-${UCA_VERSION_STRING}" CACHE INTERNAL "tarball basename")
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${UCA_VERSION_STRING}-${CMAKE_SYSTEM_PROCESSOR}")
+
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../libuca.spec.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/../libuca.spec" @ONLY IMMEDIATE)
 
 include(CPack)
