--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -284,7 +284,7 @@ set(CPACK_PACKAGE_NAME "libuca")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.3.6), libgcc1 (>= 1:4.1)")
 
 # this doesn't work when building RPMs on Jenkins
-#set(CPACK_SET_DESTDIR ON)
+set(CPACK_SET_DESTDIR ON)
 
 set(CPACK_PACKAGE_CONTACT "Matthias Vogelgesang")
 set(CPACK_PACKAGE_VENDOR "Karlsruhe Institute of Technology/IPE")
