--- a/libuca.spec.in
+++ b/libuca.spec.in
@@ -7,6 +7,7 @@ Release:        1
 License:        unknown
 Group:          unknown
 Vendor:         Karlsruhe Institute of Technology/IPE
+Prefix:         @CMAKE_INSTALL_PREFIX@
 
 
 
